--- a/React/ReactFromScratch/package.json
+++ b/React/ReactFromScratch/package.json
@@ -38,6 +38,7 @@
         "@material-ui/icons": "^4.2.1",
         "@types/redux-immutable-state-invariant": "^2.1.1",
         "@types/redux-logger": "^3.0.7",
+        "axios": "^0.19.0",
         "node-sass": "^4.12.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
